remove nbsp, fix some wrapping issues

--- a/src/sass/common.sass
+++ b/src/sass/common.sass
@@ -191,3 +191,6 @@ a.white
     text-align: right
     text-decoration: underline
     margin-right: 20px
+
+.nowrap
+  white-space: nowrap
