--- a/src/sass/selections.sass
+++ b/src/sass/selections.sass
@@ -19,8 +19,6 @@ $selectionMarginRight: 20px
     .title
       font-weight: bold
       margin-bottom: 5px
-      &.nowrap
-        white-space: nowrap
   .filter-menu
     display: flex
   .filter
